<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orderInCategory="10"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_add_donate_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/add_a_schedule"/>
        <item
            android:id="@+id/nav_show_pending_donate_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/show_pending_schedule"/>
        <item
            android:id="@+id/nav_show_completed_donate_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/show_com_schedule"/>
        <item
            android:id="@+id/nav_entry_giving_reliefs"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/entry_given_reliefs"
            />
        <item
            android:id="@+id/nav_add_company"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/add_a_company"
            />
        <item
            android:id="@+id/nav_add_user_in_company"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="Add user in company"/>
        <item
            android:id="@+id/nav_add_request_for_relief"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/add_request_for_relief"
            />
        <item
            android:id="@+id/nav_user_type"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="User Type"/>
        <item
            android:id="@+id/nav_search_by_nid"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="Search Given Reliefs"
            />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="User"
            />
        <item
            android:id="@+id/nav_goods"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="Goods"
            />
        <item
            android:id="@+id/nav_news_home"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="News"
            />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />
    </group>

    <item android:title="Communicate"
        android:id="@+id/group_title_1">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/contact" />
        </menu>
    </item>

</menu>
